Contacts section background change

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                 </div>
             </div>
         </section>
-        <section id="contacts">
+        <section class="bg-secondary" id="contacts">
             <div class="container">
                 <div class="row g-5">
                     <div class="col">
