Hide lightbox navigation controls on all screens

--- a/index.html
+++ b/index.html
@@ -324,12 +324,12 @@
                                 <a
                                     href="images/u4555836278_abstract_painting_dark_of_Silent_Silhouettes_--ar_642027f9-9dd3-449d-912e-f792662a7c9e_3.png"
                                     data-lightbox="gallery"
-                                    data-title="Silent Silhouettes - Piece 1"
+                                    data-title="Silent Silhouettes 1"
                                 >
                                     <img
                                         src="images/u4555836278_abstract_painting_dark_of_Silent_Silhouettes_--ar_642027f9-9dd3-449d-912e-f792662a7c9e_3.png"
                                         class="d-block w-100"
-                                        alt="..."
+                                        alt="Silent Silhouettes 1"
                                     />
                                 </a>
                             </div>
@@ -338,12 +338,12 @@
                                 <a
                                     href="images/u4555836278_abstract_painting_dark_of_Silent_Silhouettes_--ar_3f61208f-afe6-41d4-bc84-d14d4014d4be_2.png"
                                     data-lightbox="gallery"
-                                    data-title="Silent Silhouettes - Piece 2"
+                                    data-title="Silent Silhouettes 2"
                                 >
                                     <img
                                         src="images/u4555836278_abstract_painting_dark_of_Silent_Silhouettes_--ar_3f61208f-afe6-41d4-bc84-d14d4014d4be_2.png"
                                         class="d-block w-100"
-                                        alt="..."
+                                        alt="Silent Silhouettes 2"
                                     />
                                 </a>
                             </div>
@@ -357,7 +357,7 @@
                                     <img
                                         src="images/u4555836278_dark_abstract_painting_of_Silent_Silhouettes_--ar_f8428d4a-2488-425b-934d-6a24f4520320_2.png"
                                         class="d-block w-100"
-                                        alt="..."
+                                        alt="Silent Silhouettes 3"
                                     />
                                 </a>
                             </div>
@@ -371,7 +371,7 @@
                                     <img
                                         src="images/u4555836278_darkabstract_painting_of_Silent_Silhouettes_--ar__e86920cc-b0c2-4347-b2a7-f294d52f593a_0.png"
                                         class="d-block w-100"
-                                        alt="..."
+                                        alt="Silent Silhouettes 4"
                                     />
                                 </a>
                             </div>
