Set carousel item interval to 4000ms, smaller arrows in the carousel, changed titles in lightbox

--- a/index.html
+++ b/index.html
@@ -320,7 +320,10 @@
                         data-bs-touch="true"
                     >
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
+                            <div
+                                class="carousel-item active"
+                                data-bs-interval="4000"
+                            >
                                 <a
                                     href="images/u4555836278_abstract_painting_dark_of_Silent_Silhouettes_--ar_642027f9-9dd3-449d-912e-f792662a7c9e_3.png"
                                     data-lightbox="gallery"
@@ -334,7 +337,7 @@
                                 </a>
                             </div>
 
-                            <div class="carousel-item">
+                            <div class="carousel-item" data-bs-interval="4000">
                                 <a
                                     href="images/u4555836278_abstract_painting_dark_of_Silent_Silhouettes_--ar_3f61208f-afe6-41d4-bc84-d14d4014d4be_2.png"
                                     data-lightbox="gallery"
@@ -348,11 +351,11 @@
                                 </a>
                             </div>
 
-                            <div class="carousel-item">
+                            <div class="carousel-item" data-bs-interval="4000">
                                 <a
                                     href="images/u4555836278_dark_abstract_painting_of_Silent_Silhouettes_--ar_f8428d4a-2488-425b-934d-6a24f4520320_2.png"
                                     data-lightbox="gallery"
-                                    data-title="Silent Silhouettes - Piece 3"
+                                    data-title="Silent Silhouettes 3"
                                 >
                                     <img
                                         src="images/u4555836278_dark_abstract_painting_of_Silent_Silhouettes_--ar_f8428d4a-2488-425b-934d-6a24f4520320_2.png"
@@ -362,11 +365,11 @@
                                 </a>
                             </div>
 
-                            <div class="carousel-item">
+                            <div class="carousel-item" data-bs-interval="4000">
                                 <a
                                     href="images/u4555836278_darkabstract_painting_of_Silent_Silhouettes_--ar__e86920cc-b0c2-4347-b2a7-f294d52f593a_0.png"
                                     data-lightbox="gallery"
-                                    data-title="Silent Silhouettes - Piece 4"
+                                    data-title="Silent Silhouettes 4"
                                 >
                                     <img
                                         src="images/u4555836278_darkabstract_painting_of_Silent_Silhouettes_--ar__e86920cc-b0c2-4347-b2a7-f294d52f593a_0.png"
